# lab-4-GenyaSH2007-wq

./: CMakeLists.txt
src/resource_core/: CMakeLists.txt
src/resource_core/include/lab4/resource/: FileHandle.hpp  ResourceError.hpp  ResourceManager.hpp
src/resource_core/src/: FileHandle.cpp  ResourceManager.cpp
tests/: tests.cpp
